kubernetes/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: python-webapp-network-policy
spec:
  podSelector:
    matchLabels:
      app: python-webapp
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow traffic from ingress controller
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
      ports:
        - protocol: TCP
          port: 5000
    # Allow traffic from same namespace
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 5000

    - from:
        - ipBlock:
            cidr: 0.0.0.0/0 # Allows all external traffic for testing
      ports:
        - protocol: TCP
          port: 5000      
          
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443
